--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ header , main{
     background-color: red;
     padding: 8px 15px 8px 15px;
     border-radius: 20px;
+    border: none;
 }
 .image{
     display: flex;
